Fixed usage of deprecated API in DocumentationIndexParser